    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:fontFamily="sans-serif"
            android:textSize="60sp"
            android:textColor="#818181"
            android:shadowColor="#181818"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/calorify"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/slogan"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="#2B2B2C"/>

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:layout_gravity="center|bottom"/>

    </LinearLayout>


